profilelist1exp/unpackaged/objects/Case_Distribution_SubTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Case type Distribution will get sub types and case reasons according to region.</description>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_type__c</fullName>
        <label>Sub type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Distribution SubTypes</label>
</CustomObject>